# Well-Done

./: .gitignore  .gitlab-ci.yml  README.md  package-lock.json
be/: .gitignore  .gitlab-ci.yml  Dockerfile  build.gradle
bridge/: RosBridge.py  RosBridge_v4.py
bridge/RosBridge_Modulized/: __init__.py  flask_server.py  main.py  message_types.py  ros_node.py  setup.py
exec/dump/: board.sql  inventory.sql  inventory_history.sql  robot_path.sql  role.sql  room.sql  storage.sql  user.sql  user_roles.sql
faceid/: detacter_rpi3b.py  detacting.py  face_tracking.py  traning.py
fe/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
fe/nginx/: default.conf
fe/src/: App.css  App.jsx  index.css  main.jsx
idea/: 스마트 농업 모니터링 시스템.md  스마트 안개농법 모니터링 시스템.md  스마트홈 디지털 트윈 시뮬레이터.md  스마트홈 원격 제어 및 모니터링 시스템.md
sim/ros2_ws/: .gitignore  README.md
sim/ros2_ws/src/ros2_smart_home/ssafy_msgs/: CMakeLists.txt  package.xml  setup.py
sim/ros2_ws/src/ros2_smart_home/ssafy_msgs/msg/: ClassCounts.msg  CustomObjectInfo.msg  EnviromentStatus.msg  FSMStatus.msg  MappingDone.msg  PickDone.msg  PickPlaceCommand.msg  PlaceDone.msg  ScanWithPose.msg  StatusStamped.msg  TurtlebotStatus.msg
sleep/BiLSTM+Attention/: sleep_analysis_model.py
sleep/BiLSTM+Attention(X)/: sleep_analysis_pipeline.py
sleep/EDF(X)/: train-sleep-model-v2.py  train-sleep-model.py
sleep/More Simplify(Tensorflow + CNN)/: check_one_sound.py  check_sleep_status_after.py  check_sleep_status_live.py  requirement.txt  wav_preprocessing.py
sub1/: READ.md  README.md  Readme.md
(+584 files in other folders)
